# cpptensorrt

./: .gitignore  CMakeLists.txt  README.md  build.sh  inference.cpp  pytorch_model.py  sample_segmentation.cpp  serialize_model.cpp  trt_sample.cpp
common/: logger.hpp  logging.hpp  padding.hpp  utils.hpp
models/: model.hpp  trt_model.hpp
